standardizing an internal command line to central place which will be inherited by all modules using same plugin